[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/other/input_detection/input_detection.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/terrains/grid/grid.gd" type="Script" id=2]
[ext_resource path="res://assets/terrains/model/Highlight.obj" type="ArrayMesh" id=3]

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.588235 )

[sub_resource type="ConvexPolygonShape" id=1]
points = PoolVector3Array( -0.476372, 0, -0.277575, 0.499861, 0.155721, 0.28878, 0.480546, 0, 0.277575, 0.499861, 0.167992, -0.28878, -0.472395, 0.2, 0.275267, -0.0156164, -1.38778e-17, 0.549342, -0.0154693, 0.2, -0.544775, 0.0197903, -1.38778e-17, -0.549342, 0.0196431, 0.2, 0.544775, -0.476372, 0, 0.277575, -0.472395, 0.2, -0.275267, 0.480546, 0, -0.277575, 0.476476, 0.2, 0.275267, 0.476476, 0.2, -0.275267, 0.0197903, -1.38778e-17, 0.549342, -0.0392209, 0, -0.537512, -0.0388775, 0.2, 0.533044, 0.0196431, 0.2, -0.544775, -0.42907, -1.38778e-17, 0.313065, -0.425485, 0.2, -0.310462, -0.42907, -1.38778e-17, -0.313065, -0.425485, 0.2, 0.310462, 0.409545, 1.38778e-17, -0.324787, 0.409545, 1.38778e-17, 0.324787, -0.287255, 0, 0.39566, -0.28485, 0.2, -0.392371, 0.5, 0.168011, 0.27655, 0.406158, 0.2, 0.322087, -0.0156164, -1.38778e-17, -0.549342, -0.0392209, 0, 0.537512, -0.0154693, 0.2, 0.544775, -0.0388775, 0.2, -0.533044, 0.406158, 0.2, -0.322087, -0.287255, 0, -0.39566, -0.28485, 0.2, 0.392371, -0.464476, 0, 0.289405, -0.464476, 0, -0.289405, 0.185209, 0, -0.45481, 0.185209, 0, 0.45481, 0.46865, 0, -0.289405, 0.46865, 0, 0.289405, -0.460598, 0.2, -0.286999, -0.460598, 0.2, 0.286999 )

[node name="grid" type="StaticBody"]
script = ExtResource( 2 )

[node name="pivot" type="Spatial" parent="."]

[node name="highlight" type="MeshInstance" parent="pivot"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.2, 0 )
visible = false
mesh = ExtResource( 3 )
skeleton = NodePath("../..")
software_skinning_transform_normals = false
material/0 = SubResource( 2 )

[node name="top" type="MeshInstance" parent="pivot"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )
skeleton = NodePath("../..")
software_skinning_transform_normals = false

[node name="base" type="MeshInstance" parent="pivot"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )
generate_lightmap = false
skeleton = NodePath("../..")
software_skinning_transform_normals = false

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="input_detection" parent="." instance=ExtResource( 1 )]

[node name="Tween" type="Tween" parent="."]

[connection signal="input_event" from="." to="." method="_on_grid_input_event"]
[connection signal="any_gesture" from="input_detection" to="." method="_on_input_detection_any_gesture"]
